deploy/okd/core/litellm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: litellm-svc
  namespace: sophia-core
spec:
  selector:
    app: litellm
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
