deploy/okd/core/litellm/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: litellm-route
  namespace: sophia-core
spec:
  host: lite-sophia.kisai.fr
  to:
    kind: Service
    name: litellm-svc
    weight: 100
  port:
    targetPort: 4000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
